Karen: fixing bottom alignment of logo with searchbox

--- a/web/wp-content/themes/accredit/src/assets/scss/modules/_search.scss
+++ b/web/wp-content/themes/accredit/src/assets/scss/modules/_search.scss
@@ -1,8 +1,5 @@
 .top-bar {
 
-  .search {
-    margin-top: 2rem;
-  }
 
   .input-group {
     margin-bottom: 0;
@@ -22,6 +19,7 @@
   .searchform {
     // border: 0;
     font-size: .75rem;
+    margin-bottom: .1rem;
     @include breakpoint(small only) {
       width: 100%;
       height: 2.5rem;
